--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section id="section-tours" class="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -165,7 +165,7 @@
                                         <p class="card__price-value">$297</p>
                                     </div>
 
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -200,7 +200,7 @@
                                         <p class="card__price-value">$497</p>
                                     </div>
 
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -235,7 +235,7 @@
                                         <p class="card__price-value">$897</p>
                                     </div>
 
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -390,6 +390,28 @@
                 </div>
             </div>
         </footer>
+
+        <div id="popup" class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem animi tempore pariatur, nesciunt ad ex.
+                        Dolorem minima minus nisi corporis alias velit eaque eum consequatur explicabo numquam. Ipsum, in sit.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iste est soluta quasi cumque voluptatum
+                        neque id iure sunt, incidunt unde magni quidem, sed alias expedita repellat, veniam omnis obcaecati.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
 
         <!--
             <section class="grid-test">
